MenuManager created, exit, display done, reading database without validation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CXX_STANDARD REQUIRED 17)
 set(FLAGS -Wall -Wpedantic -Wextra -Werror)
 set(SRC  Person.cpp
          PersonManager.cpp
-         Student.cpp)
+         Student.cpp
+         MenuManager.cpp)
 
 find_package(GTest REQUIRED)
 
