Employee class with sorting by salary method added and tested!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,9 @@ project(UniversityDataBase)
 set(CXX_STANDARD REQUIRED 17)
 set(FLAGS -Wall -Wpedantic -Wextra -Werror)
 set(SRC  Person.cpp
-         PersonManager.cpp
          Student.cpp
+         Employee.cpp
+         PersonManager.cpp
          MenuManager.cpp)
 
 find_package(GTest REQUIRED)
